feat(profile): request analyses on demand
